[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vvl"
version = "1.1.3"
dependencies = [
  "igraph",
  "geomdl",
  "matplotlib",
  "nibabel",
  "numba",
  "numpy",
  "opencv-python",
  "openpyxl",
  "pyexcelerate",
  "pandas",
  "PyMCubes",
  "pyvista",
  "scikit-image",
  "tqdm",
  "skan",
  "networkx"
]
requires-python = ">=3.8"
authors = [
  {name = "Jacob Bumgarner", email = "jacobbum21@gmail.com"},
  {name = "Erik Riedel", email = "fabianschneider@gmail.com"},
  {name = "Fabian Schneider", email = "fabianschneider@gmail.com"},
]

description = "An open-source application for the analysis and visualization of segmented vasculature datasets."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[project.optional-dependencies]
gui = ["PyQt5"]

[tool.setuptools.packages.find]
include = ["vvl"]